[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview_coach"
version = "1.0.0"
description = "RL environment for training AI interview coaching strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pyyaml",
    "requests",
    "numpy",
    "gradio",
    "fastapi",
    "uvicorn[standard]",
    "pydantic"
]

# This allows the environment to be run as a CLI command
[project.scripts]
interview-coach-sim = "inference:run_simulation"

[tool.setuptools]
py-modules = ["env", "grader", "inference", "app"]
