[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview_coach"
version = "1.0.0"
description = "RL environment for training AI interview coaching strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pyyaml",
    "requests",
    "numpy",
    "gradio",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openenv-core>=0.2.1"
]

[project.scripts]
server = "server.app:app"
interview-coach-sim = "inference:run_simulation"

[tool.setuptools]
packages = ["server"]
py-modules = ["env", "grader", "inference"]
