[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview_coach"
version = "1.0.0"
description = "RL environment for training AI interview coaching strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pyyaml",
    "requests",
    "numpy",
    "gradio",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openenv-core>=0.2.1"
]

[project.scripts]
server = "server.app:main"
interview-coach-sim = "inference:run_simulation"

# Formal package-based entry points for OpenEnv discovery
[project.entry-points."openenv.tasks"]
easy = "interview_coach.grader:grade_easy"
medium = "interview_coach.grader:grade_medium"
hard = "interview_coach.grader:grade_hard"

[project.entry-points."openenv.graders"]
easy = "interview_coach.grader:grade_easy"
medium = "interview_coach.grader:grade_medium"
hard = "interview_coach.grader:grade_hard"

[tool.setuptools]
packages = ["interview_coach", "server"]
